# iPlug2

./: common-mac.xcconfig
Dependencies/IPlug/RTAudio/: RtAudio.cpp
Dependencies/IPlug/RTAudio/tests/: CMakeLists.txt
Dependencies/IPlug/RTMidi/: RtMidi.cpp
IPlug/: IPlugConstants.h  IPlugDelegate_select.h  IPlug_include_in_plug_hdr.h  IPlug_include_in_plug_src.h
Scripts/cmake/: APP.cmake  FindiPlug2.cmake  VST3.cmake
WDL/swell/: swell-dlg.mm
